--- a/usr.sbin/bsdinstall/scripts/Makefile
+++ b/usr.sbin/bsdinstall/scripts/Makefile
@@ -1,7 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/bsdinstall/scripts/Makefile 291819 2015-12-04 19:16:56Z bdrewery $
-
-SCRIPTS= auto adduser checksum config entropy hostname jail \
+SCRIPTS= auto adduser checksum config entropy hardening hostname jail \
 	 keymap mirrorselect mount netconfig netconfig_ipv4 netconfig_ipv6 \
 	 rootpass script services time umount wlanconfig zfsboot
 BINDIR= ${LIBEXECDIR}/bsdinstall
