--- a/usr.sbin/bsnmpd/tools/Makefile
+++ b/usr.sbin/bsnmpd/tools/Makefile
@@ -1,8 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/bsnmpd/tools/Makefile 216295 2010-12-08 14:30:25Z syrinx $
+# $FreeBSD: stable/11/usr.sbin/bsnmpd/tools/Makefile 313242 2017-02-04 17:21:17Z ngie $
 # Author: Shteryana Shopova <syrinx@FreeBSD.org>
 
 SUBDIR=	libbsnmptools \
 	bsnmptools
+
+SUBDIR_DEPEND_bsnmptools=	libbsnmptools
+
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
