--- a/usr.sbin/ctm/Makefile.inc
+++ b/usr.sbin/ctm/Makefile.inc
@@ -1,5 +1,3 @@
-# $MidnightBSD$
-
-.if exists(${.CURDIR}/../../Makefile.inc)
-.include "${.CURDIR}/../../Makefile.inc"
+.if exists(${.CURDIR:H:H}/Makefile.inc)
+.include "${.CURDIR:H:H}/Makefile.inc"
 .endif
