--- a/usr.sbin/ctm/ctm_rmail/Makefile
+++ b/usr.sbin/ctm/ctm_rmail/Makefile
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.sbin/ctm/ctm_rmail/Makefile 201390 2010-01-02 11:07:44Z ed $
 
 PROG=	ctm_rmail
 MLINKS=	ctm_rmail.1 ctm_smail.1 \
