--- a/usr.sbin/wpa/Makefile.crypto
+++ b/usr.sbin/wpa/Makefile.crypto
@@ -1,9 +1,9 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.sbin/wpa/Makefile.crypto 346981 2019-05-01 01:43:17Z cy $
 
 .if ${MK_OPENSSL} != "no" && !defined(RELEASE_CRUNCH)
-SRCS+=	crypto_openssl.c random.c sha1-prf.c sha256-prf.c
-DPADD+=	${LIBSSL} ${LIBCRYPTO}
-LDADD+=	-lssl -lcrypto
+SRCS+=	crypto_openssl.c random.c sha1-prf.c sha256-prf.c sha256-tlsprf.c \
+	sha512.c
+LIBADD+=	ssl crypto
 CFLAGS+= -DCONFIG_SHA256
 .else
 CFLAGS+=-DCONFIG_CRYPTO_INTERNAL
@@ -20,7 +20,9 @@ CONFIG_INTERNAL_TLS=y
 CONFIG_INTERNAL_DH5=y
 CONFIG_INTERNAL_DH=y
 NEED_AES_ENC=true
+NEED_AES_CBC=true
 .endif
+NEED_AES_OMAC1=true
 
 .if defined(TLS_FUNCS)
 NEED_TLS_PRF=y
@@ -49,12 +51,13 @@ NEED_MD4=y
 NEED_RC4=y
 .else
 CFLAGS+=-DEAP_TLS_OPENSSL
-SRCS+=	tls_openssl.c
+SRCS+=	tls_openssl.c tls_openssl_ocsp.c
 .endif
 .endif
 
 .if defined(CONFIG_INTERNAL_AES)
-SRCS+=	aes-internal.c \
+SRCS+=	aes-unwrap.c aes-wrap.c \
+	aes-internal.c \
 	aes-internal-dec.c \
 	aes-internal-enc.c
 .endif
@@ -93,7 +96,7 @@ SRCS+=	md4-internal.c
 .endif
 
 .if defined(CONFIG_INTERNAL_MD5)
-SRCS+=	md5-internal.c
+SRCS+=	md5.c md5-internal.c
 .endif
 
 .if defined(NEED_FIPS186_2_PRF)
