--- a/usr.sbin/wpa/Makefile.inc
+++ b/usr.sbin/wpa/Makefile.inc
@@ -1,19 +1,16 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.sbin/wpa/Makefile.inc 346981 2019-05-01 01:43:17Z cy $
 
 BINDIR?=	/usr/sbin
 
-WPA_DISTDIR?= 		${.CURDIR}/../../../contrib/wpa/
+WPA_DISTDIR?= 		${SRCTOP}/contrib/wpa/
 WPA_SUPPLICANT_DISTDIR?=${WPA_DISTDIR}/wpa_supplicant
 HOSTAPD_DISTDIR?=	${WPA_DISTDIR}/hostapd
 
-.PATH.c:${.CURDIR}/.. \
-	${WPA_DISTDIR}/src/ap \
+.PATH.c:${.CURDIR:H} \
 	${WPA_DISTDIR}/src/common \
 	${WPA_DISTDIR}/src/crypto \
 	${WPA_DISTDIR}/src/eapol_auth \
 	${WPA_DISTDIR}/src/eap_common \
-	${WPA_DISTDIR}/src/eap_peer \
-	${WPA_DISTDIR}/src/eap_server \
 	${WPA_DISTDIR}/src/eapol_supp \
 	${WPA_DISTDIR}/src/l2_packet \
 	${WPA_DISTDIR}/src/radius \
@@ -34,5 +31,7 @@ CFLAGS+=-I${WPA_DISTDIR}/src/wps
 
 CFLAGS+= -DCONFIG_CTRL_IFACE
 CFLAGS+= -DCONFIG_CTRL_IFACE_UNIX
+CFLAGS+= -DNEED_AP_MLME
+CFLAGS+= -DTLS_DEFAULT_CIPHERS=\"DEFAULT:!EXP:!LOW\"
 
 .include <bsd.own.mk>
