--- a/usr.sbin/wpa/ndis_events/Makefile
+++ b/usr.sbin/wpa/ndis_events/Makefile
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.sbin/wpa/ndis_events/Makefile 151214 2005-10-10 17:51:12Z wpaul $
 
 PROG=	ndis_events
 SRCS+=	ndis_events.c
