--- a/usr.sbin/wpa/wpa_supplicant/Makefile
+++ b/usr.sbin/wpa/wpa_supplicant/Makefile
@@ -1,24 +1,34 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.sbin/wpa/wpa_supplicant/Makefile 346981 2019-05-01 01:43:17Z cy $
 
-.include "${.CURDIR}/../Makefile.inc"
+.include <src.opts.mk>
+
+.include "../Makefile.inc"
 
 .PATH.c:${WPA_SUPPLICANT_DISTDIR} \
+	${WPA_DISTDIR}/src/eap_peer \
 	${WPA_DISTDIR}/src/drivers
 
 PROG=	wpa_supplicant
-SRCS=	aes-unwrap.c base64.c blacklist.c bss.c common.c config.c \
-	config_file.c ctrl_iface.c ctrl_iface_unix.c driver_bsd.c \
-	driver_common.c driver_ndis.c driver_wired.c drivers.c \
-	eap_register.c eloop.c events.c gas.c gas_query.c hs20.c \
-	hs20_supplicant.c http_client.c http_server.c httpread.c \
+
+SRCS=	base64.c bitfield.c blacklist.c bss.c cli.c common.c \
+	config.c config_file.c \
+	ctrl_iface.c ctrl_iface_common.c ctrl_iface_unix.c \
+	dh_groups.c driver_bsd.c driver_common.c \
+	driver_ndis.c driver_wired.c driver_wired_common.c drivers.c \
+	eap_register.c eap_wsc.c eap_wsc_common.c eloop.c \
+	events.c gas.c gas_query.c hs20_supplicant.c \
+	http_client.c http_server.c \
+	httpread.c hw_features_common.c \
 	ieee802_11_common.c interworking.c l2_packet_freebsd.c main.c \
-	md5.c notify.c offchannel.c os_unix.c peerkey.c pmksa_cache.c \
-	preauth.c scan.c upnp_xml.c uuid.c wpa.c wpa_common.c wpa_debug.c \
-	wpa_ft.c wpa_ie.c wpa_supplicant.c wpabuf.c wpas_glue.c wps.c \
-	wps_attr_build.c wps_attr_parse.c wps_attr_process.c \
+	notify.c offchannel.c op_classes.c os_unix.c pmksa_cache.c preauth.c \
+	rrm.c scan.c upnp_xml.c uuid.c \
+	wmm_ac.c wpa.c wpa_common.c wpa_ctrl.c \
+	wpa_debug.c wpa_ft.c wpa_ie.c wpa_supplicant.c wpabuf.c wpas_glue.c \
+	wps.c wps_attr_build.c wps_attr_parse.c wps_attr_process.c \
 	wps_common.c wps_dev_attr.c wps_enrollee.c wps_registrar.c \
 	wps_supplicant.c wps_upnp.c wps_upnp_ap.c wps_upnp_event.c \
-	wps_upnp_ssdp.c wps_upnp_web.c Packet32.c
+	wps_upnp_ssdp.c wps_upnp_web.c \
+	Packet32.c
 
 MAN=	wpa_supplicant.8 wpa_supplicant.conf.5
 
@@ -33,22 +43,21 @@ CFLAGS+=-DCONFIG_BACKEND_FILE \
 	-DCONFIG_DRIVER_BSD \
 	-DCONFIG_DRIVER_NDIS \
 	-DCONFIG_DRIVER_WIRED \
+	-DCONFIG_GAS \
+	-DCONFIG_HS20 \
+	-DCONFIG_IEEE80211R \
+	-DCONFIG_INTERWORKING \
 	-DCONFIG_PEERKEY \
+	-DCONFIG_PRIVSEP \
 	-DCONFIG_SMARTCARD \
 	-DCONFIG_TERMINATE_ONLASTIF \
+	-DCONFIG_TLS=openssl \
 	-DCONFIG_WPS \
 	-DCONFIG_WPS2 \
 	-DCONFIG_WPS_UPNP \
-	-DCONFIG_TLS=openssl \
-	-DCONFIG_IEEE80211R \
-	-DCONFIG_INTERWORKING \
-	-DCONFIG_PRIVSEP \
-	-DCONFIG_HS20 \
-	-DCONFIG_GAS \
 	-DPKCS12_FUNCS
 #CFLAGS+= -g
-DPADD+=	${LIBPCAP}
-LDADD+=	-lpcap
+LIBADD=	pcap util
 
 # User customizations to the wpa_supplicant build environment
 CFLAGS+=${WPA_SUPPLICANT_CFLAGS}
@@ -66,9 +75,6 @@ CFLAGS+=-DEAP_GTC \
 	-DEAP_PSK \
 	-DEAP_TLS \
 	-DEAP_TTLS \
-	-DEAP_GTC \
-	-DEAP_OTP \
-	-DEAP_LEAP \
 	-DIEEE8021X_EAPOL
 SRCS+=	chap.c \
 	eap.c \
@@ -93,10 +99,6 @@ TLS_FUNCS=y
 NEED_AES_EAX=y
 NEED_AES_ENCBLOCK=y
 NEED_AES_OMAC1=y
-.endif
-
-.if !empty(CFLAGS:M-DCONFIG_WPS)
-NEED_AES_CBC=y
 .endif
 
 .if !empty(CFLAGS:M*-DEAP_AKA)
@@ -125,8 +127,7 @@ NEED_FIPS186_2_PRF=y
 #
 .if !empty(CFLAGS:M*-DPCSC_FUNCS)
 SRCS+=	pcsc_funcs.c
-DPADD+=${LIBPTHREAD}
-LDADD+=-lpcsclite -lpthread
+LIBADD+=	pcslite pthread
 .endif
 
 .if !empty(CFLAGS:M*-DEAP_GPSK)
@@ -146,6 +147,6 @@ SRCS+=	eap_sake.c \
 	eap_sake_common.c
 .endif
 
-.include "${.CURDIR}/../Makefile.crypto"
+.include "../Makefile.crypto"
 
 .include <bsd.prog.mk>
