--- a/etc/mtree/Makefile
+++ b/etc/mtree/Makefile
@@ -1,12 +1,16 @@
 # $MidnightBSD$
 # $FreeBSD: stable/10/etc/mtree/Makefile 260013 2013-12-28 20:05:31Z jmmv $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
-FILES=	${_BSD.debug.dist} \
+# NOTE: BSD.debug.dist is unconditionally installed for developer ease-of-use.
+FILES=	\
+	BSD.debug.dist \
 	BSD.include.dist \
 	BSD.local.dist \
 	BSD.root.dist \
+	${_BSD.lib32.dist} \
+	${_BSD.libsoft.dist} \
 	${_BSD.sendmail.dist} \
 	${_BSD.tests.dist} \
 	BSD.usr.dist \
@@ -14,11 +18,14 @@ FILES=	${_BSD.debug.dist} \
 	BSD.x11-4.dist \
 	BSD.x11.dist
 
-.if ${MK_DEBUG_FILES} != "no"
-_BSD.debug.dist=	BSD.debug.dist
-.endif
 .if ${MK_GROFF} != "no"
-_BSD.groff.dist=        BSD.groff.dist
+_BSD.groff.dist=	BSD.groff.dist
+.endif
+.if ${MK_LIB32} != "no"
+_BSD.lib32.dist=	BSD.lib32.dist
+.endif
+.if ${MK_LIBSOFT} != "no"
+_BSD.libsoft.dist=	BSD.libsoft.dist
 .endif
 .if ${MK_SENDMAIL} != "no"
 _BSD.sendmail.dist=	BSD.sendmail.dist
