update devd config

--- a/etc/devd.conf
+++ b/etc/devd.conf
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/etc/devd.conf 343641 2019-02-01 03:02:52Z avos $
 #
 # Refer to devd.conf(5) and devd(8) man pages for the details on how to
 # run and configure devd.
@@ -20,8 +20,11 @@ options {
 	#XXX Yes, these are gross -- imp
 	set scsi-controller-regex
 		"(aac|adv|adw|aha|ahb|ahc|ahd|aic|amd|amr|asr|bt|ciss|ct|dpt|\
-		esp|ida|iir|ips|isp|mlx|mly|mpt|ncr|ncv|nsp|stg|sym|trm|wds)\
-		[0-9]+";
+		esp|ida|iir|ips|isp|mlx|mly|mpr|mps|mpt|ncr|ncv|nsp|stg|sym|\
+		trm|wds)[0-9]+";
+	set wifi-driver-regex
+		"(ath|bwi|bwn|ipw|iwi|iwm|iwn|malo|mwl|otus|ral|rsu|rum|run|\
+		uath|upgt|ural|urtw|urtwn|wi|wpi|wtap|zyd)[0-9]+";
 };
 
 # Note that the attach/detach with the highest value wins, so that one can
@@ -38,7 +41,7 @@ options {
 #
 notify 0 {
 	match "system"		"IFNET";
-	match "subsystem"	"!usbus[0-9]+";
+	match "subsystem"	"!(usbus|wlan)[0-9]+";
 	match "type"		"ATTACH";
 	action "/etc/pccard_ether $subsystem start";
 };
@@ -57,17 +60,16 @@ notify 0 {
 };
 
 #
-# Like Ethernet devices, but separate because
-# they have a different media type.  We may want
-# to exploit this later.
+# Like Ethernet devices, but separate because 802.11 require spawning
+# wlan(4) interface.
 #
-detach 0 {
-	media-type "802.11";
-	action "/etc/pccard_ether $device-name stop";
-};
 attach 0 {
-	media-type "802.11";
-	action "/etc/pccard_ether $device-name start";
+	device-name "$wifi-driver-regex";
+	action "/etc/pccard_ether $device-name startchildren";
+};
+detach 0 {
+	device-name "$wifi-driver-regex";
+	action "/etc/pccard_ether $device-name stopchildren";
 };
 notify 0 {
 	match "system"		"IFNET";
@@ -270,7 +272,7 @@ nomatch 10 {
 	match "bus" "pccard[0-9]+";
 	match "manufacturer" "0x1234";
 	match "product" "0x2323";
-	action "kldload if_deqna";
+	action "kldload -n if_deqna";
 };
 attach 10 {
 	device-name "deqna[0-9]+";
