--- a/etc/devd/apple.conf
+++ b/etc/devd/apple.conf
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/etc/devd/apple.conf 274660 2014-11-18 16:31:00Z jhibbits $
 #
 # PowerPC Apple specific devd events
 
@@ -71,4 +71,10 @@ notify 0 {
 	action			"camcontrol eject cd0";
 };
 
-
+# Equivalent to the ACPI/ACAD notify
+notify 10 {
+	match "system"		"PMU";
+	match "subsystem"	"POWER";
+	match "type"		"ACLINE";
+	action "/etc/rc.d/power_profile $notify";
+};
