--- a/etc/devd/zfs.conf
+++ b/etc/devd/zfs.conf
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/etc/devd/zfs.conf 324746 2017-10-19 07:23:26Z avg $
 #
 # Sample ZFS problem reports handling.
 
