--- a/lib/libsqlite3/Makefile
+++ b/lib/libsqlite3/Makefile
@@ -9,7 +9,9 @@ CFLAGS+=	-I${SQLITEDIR} -DSQLITE_ENABLE_FTS3 -DSQLITE_OS_UNIX=1 \
 		-DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 \
 		-DHAVE_STDLIB_H=1 -DHAVE_INTTYPES_H=1 -DREENTRANT=1 \
 		-DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_RTREE=1 \
-		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4
+		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4 \
+		-DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_GEOPOLY \
+		-DSQLITE_HAVE_ZLIB
 
 WARNS?=		0
 
@@ -17,7 +19,7 @@ MK_MAN=	no
 
 INCS=		${SQLITEDIR}/sqlite3.h ${SQLITEDIR}/sqlite3ext.h
 
-LIBADD+= m pthread
+LIBADD+= m pthread z
 
 .if !defined(COMPAT_32BIT)
 afterinstall: 
