--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1705,7 +1705,7 @@ legacy: .PHONY
 _bt=		_bootstrap-tools
 
 .if ${MK_GAMES} != "no"
-_strfile=	usr.bin/fortune/strfile
+_strfile=	games/fortune/strfile
 .endif
 
 .if ${MK_GCC} != "no" && ${MK_CXX} != "no"
