--- a/usr.sbin/Makefile
+++ b/usr.sbin/Makefile
@@ -72,6 +72,7 @@ SUBDIR=	adduser \
 	pwd_mkdb \
 	quot \
 	rarpd \
+	rdate \
 	rmt \
 	rpcbind \
 	rpc.lockd \
@@ -188,7 +189,6 @@ SUBDIR.${MK_NIS}+=	yppush
 SUBDIR.${MK_NIS}+=	ypserv
 SUBDIR.${MK_NIS}+=	ypset
 SUBDIR.${MK_NTP}+=	ntpd
-SUBDIR.${MK_NTP}+=	rdate
 SUBDIR.${MK_OPENSSL}+=	keyserv
 SUBDIR.${MK_PC_SYSINSTALL}+=	pc-sysinstall
 SUBDIR.${MK_PF}+=	ftp-proxy
