--- a/release/Makefile.vagrant
+++ b/release/Makefile.vagrant
@@ -1,8 +1,20 @@
 #
-# $MidnightBSD$
+# $FreeBSD: stable/11/release/Makefile.vagrant 315043 2017-03-11 02:20:11Z gjb $
 #
+# Makefile for producing and uploading Vagrant boxes to Hashicorp Atlas
 #
-# Makefile for uploading Vagrant boxes to Hashicorp Atlas
+# Usage Example:
+#   Create a Vagrant image for VirtualBox:
+#     make vagrant-box WITH_VMIMAGES=y WITH_CLOUDWARE=y \
+#       CLOUDWARE=vagrant-virtualbox VMFORMATS=vmdk
+#
+#   To create a Vagrant image for VMWare and Upload it to Atlas:
+#     VAGRANT_KEY is your Atlas API Token
+#     VAGRANT_USERNAME is your Atlas Username
+#     env VAGRANT_KEY=foo VAGRANT_USERNAME=bar make vagrant-upload \
+#       WITH_VMIMAGES=y WITH_CLOUDWARE=y CLOUDWARE=vagrant-vmware \
+#       VMFORMATS=vmdk
+#     For more info: https://www.vagrantup.com/docs/other/atlas.html
 #
 
 VAGRANT_IMG?=		${.OBJDIR}/vagrant.vmdk
@@ -24,9 +36,8 @@ VAGRANT_VERSION!=	date +%Y.%m.%d
 VAGRANT_TARGET:=	${OSRELEASE}${SNAPSHOT_DATE}
 .if !empty(CLOUDWARE)
 . for _PROVIDER in ${CLOUDWARE}
-_provider=	${_PROVIDER}
-.  if ${_provider:MVAGRANT*}
-VAGRANT_PROVIDERS+=	${_PROVIDER:S/VAGRANT-//:tl}
+.  if ${_PROVIDER:tu:MVAGRANT*}
+VAGRANT_PROVIDERS+=	${_PROVIDER:tu:S/VAGRANT-//:tl}
 .  endif
 . endfor
 .endif
@@ -52,7 +63,6 @@ vagrant-check-depends:
 .endif
 
 .for PROVIDER in ${VAGRANT_PROVIDERS}
-_provider=	${PROVIDER}
 CLEANFILES+=	vagrant-do-package-${PROVIDER} ${VAGRANT_TARGET}.${PROVIDER}.box
 CLEANDIRS+=	${PROVIDER}
 VAGRANT_UPLOAD_TGTS+=	vagrant-do-upload-${PROVIDER}
@@ -63,22 +73,25 @@ ${PROVIDER}:
 ${VAGRANT_TARGET}.${PROVIDER}.box: ${PROVIDER} cw-vagrant-${PROVIDER} vagrant-create-${PROVIDER}-metadata
 	@echo "==> PACKAGING: ${VAGRANT_TARGET}.${PROVIDER}.box in `pwd`"
 	@cp vagrant-${PROVIDER}.vmdk ${PROVIDER}/vagrant.vmdk
-. if ${_provider} == virtualbox
+. if ${PROVIDER} == "virtualbox"
 	@(cd ${.OBJDIR}/${PROVIDER} && echo '{"provider":"${PROVIDER}"}' > metadata.json)
 	@(cd ${.OBJDIR}/${PROVIDER} && tar -czf ../${VAGRANT_TARGET}.${PROVIDER}.box metadata.json box.ovf vagrant.vmdk)
-. elif ${_provider} == vmware
+. elif ${PROVIDER} == "vmware"
 	@(cd ${.OBJDIR}/${PROVIDER} && echo '{"provider":"${PROVIDER}_desktop"}' > metadata.json)
 	@(cd ${.OBJDIR}/${PROVIDER} && tar -czf ../${VAGRANT_TARGET}.${PROVIDER}.box metadata.json vagrant.vmx vagrant.vmdk)
 . endif
 
 CLEANFILES+=	vagrant-do-upload-${PROVIDER}
-vagrant-do-upload-${PROVIDER}: ${VAGRANT_TARGET}.${PROVIDER}.box
-. if ${_provider} == virtualbox
+vagrant-do-upload-${PROVIDER}: vagrant-box
+. if ${PROVIDER} == "virtualbox"
 	${.CURDIR}/scripts/atlas-upload.sh -b ${TYPE}-${REVISION}-${BRANCH} -f ${VAGRANT_TARGET}.${PROVIDER}.box -p ${PROVIDER} -k ${VAGRANT_KEY} -u ${VAGRANT_USERNAME} -v ${VAGRANT_VERSION}
-. elif ${_provider} == vmware
+. elif ${PROVIDER} == "vmware"
 	${.CURDIR}/scripts/atlas-upload.sh -b ${TYPE}-${REVISION}-${BRANCH} -f ${VAGRANT_TARGET}.${PROVIDER}.box -p ${PROVIDER}_desktop -k ${VAGRANT_KEY} -u ${VAGRANT_USERNAME} -v ${VAGRANT_VERSION}
 . endif
 	touch ${.OBJDIR}/${.TARGET}
+
+vagrant-box: ${VAGRANT_TARGET}.${PROVIDER}.box
+
 .endfor
 
 vagrant-upload:	${VAGRANT_UPLOAD_TGTS}
