--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -6,17 +6,25 @@
 # Packages to install into the image we're creating.  This is a deliberately
 # minimalist set, providing only the packages necessary to bootstrap further
 # package installation as specified via EC2 user-data.
-export VM_EXTRA_PACKAGES="ec2-scripts firstboot-midnightbsd-update firstboot-pkgs"
+export VM_EXTRA_PACKAGES="ec2-scripts firstboot-midnightbsd-update firstboot-pkgs dual-dhclient"
+
+# Include the amazon-ssm-agent package in amd64 images, since some users want
+# to be able to use it on systems which are not connected to the Internet.
+# (It is not enabled by default, however.)  This package does not exist for
+# aarch64, so we have to be selective about when we install it.
+if [ "${TARGET_ARCH}" = "amd64" ]; then
+	export VM_EXTRA_PACKAGES="${VM_EXTRA_PACKAGES} amazon-ssm-agent"
+fi
 
 # Set to a list of third-party software to enable in rc.conf(5).
-export VM_RC_LIST="ec2_configinit ec2_fetchkey ec2_ephemeralswap ec2_loghostkey firstboot_midnightbsd_update firstboot_pkgs"
+export VM_RC_LIST="ec2_configinit ec2_fetchkey ec2_ephemeralswap ec2_loghostkey firstboot_midnightbsd_update firstboot_pkgs ntpd"
 
-# Build with a 1.5 GB UFS partition; the growfs rc.d script will expand
+# Build with a 2 GB UFS partition; the growfs rc.d script will expand
 # the partition to fill the root disk after the EC2 instance is launched.
 # Note that if this is set to <N>G, we will end up with an <N+1> GB disk
 # image since VMSIZE is the size of the UFS partition, not the disk which
 # it resides within.
-export VMSIZE=1536M
+export VMSIZE=2048M
 
 # No swap space; the ec2_ephemeralswap rc.d script will allocate swap
 # space on EC2 ephemeral disks.  (If they exist -- the T2 low-cost instances
@@ -32,7 +40,7 @@ vm_extra_pre_umount() {
 	# catalogue and install or update pkg when the instance first
 	# launches, so these files would just be replaced anyway; removing
 	# them from the image allows it to boot faster.
-	chroot ${DESTDIR} env ASSUME_ALWAYS_YES=yes \
+	chroot ${DESTDIR} ${EMULATOR} env ASSUME_ALWAYS_YES=yes \
 		/usr/sbin/pkg delete -f -y pkg
 	rm ${DESTDIR}/var/db/pkg/repo-*.sqlite
 
@@ -40,8 +48,9 @@ vm_extra_pre_umount() {
 	# time; expand our filesystem to fill the disk.
 	echo 'growfs_enable="YES"' >> ${DESTDIR}/etc/rc.conf
 
-	# EC2 instances use DHCP to get their network configuration.
-	echo 'ifconfig_DEFAULT="SYNCDHCP"' >> ${DESTDIR}/etc/rc.conf
+	# EC2 instances use DHCP to get their network configuration.  IPv6
+	# requires accept_rtadv.
+	echo 'ifconfig_DEFAULT="SYNCDHCP accept_rtadv"' >> ${DESTDIR}/etc/rc.conf
 
 	# Unless the system has been configured via EC2 user-data, the user
 	# will need to SSH in to do anything.
@@ -52,12 +61,16 @@ vm_extra_pre_umount() {
 	# via EC2 user-data.
 	echo 'firstboot_pkgs_list="awscli"' >> ${DESTDIR}/etc/rc.conf
 
+	# Enable IPv6 on all interfaces, and use DHCP on both IPv4 and IPv6.
+	echo 'ipv6_activate_all_interfaces="YES"' >> ${DESTDIR}/etc/rc.conf
+	echo 'dhclient_program="/usr/local/sbin/dual-dhclient"' >> ${DESTDIR}/etc/rc.conf
+
 	# The EC2 console is output-only, so while printing a backtrace can
 	# be useful, there's no point dropping into a debugger or waiting
 	# for a keypress.
-	echo 'debug.trace_on_panic=1' >> ${DESTDIR}/etc/sysctl.conf
-	echo 'debug.debugger_on_panic=0' >> ${DESTDIR}/etc/sysctl.conf
-	echo 'kern.panic_reboot_wait_time=0' >> ${DESTDIR}/etc/sysctl.conf
+	echo 'debug.trace_on_panic=1' >> ${DESTDIR}/boot/loader.conf
+	echo 'debug.debugger_on_panic=0' >> ${DESTDIR}/boot/loader.conf
+	echo 'kern.panic_reboot_wait_time=0' >> ${DESTDIR}/boot/loader.conf
 
 	# The console is not interactive, so we might as well boot quickly.
 	echo 'autoboot_delay="-1"' >> ${DESTDIR}/boot/loader.conf
@@ -72,6 +85,14 @@ vm_extra_pre_umount() {
 	# emulated serial port.  It is not clear if EC2 still has any such
 	# nodes, but apply the workaround just in case.
 	echo 'hw.broken_txfifo="1"' >> ${DESTDIR}/boot/loader.conf
+
+	# Load the kernel module for the Amazon "Elastic Network Adapter"
+	echo 'if_ena_load="YES"' >> ${DESTDIR}/boot/loader.conf
+
+	# Use the NTP service provided by Amazon
+	sed -i '' -e 's/^pool/#pool/' \
+		-e '1,/^#server/s/^#server.*/server 169.254.169.123 iburst/' \
+		${DESTDIR}/etc/ntp.conf
 
 	# The first time the AMI boots, the installed "first boot" scripts
 	# should be allowed to run:
