--- a/libexec/mport.query/Makefile
+++ b/libexec/mport.query/Makefile
@@ -5,6 +5,6 @@ WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport dispatch BlocksRuntime pthread sqlite3
 
 .include <bsd.prog.mk>
