--- a/usr.sbin/unbound/daemon/Makefile
+++ b/usr.sbin/unbound/daemon/Makefile
@@ -4,11 +4,11 @@
 LDNSDIR= ${SRCTOP}/contrib/ldns
 UNBOUNDDIR= ${SRCTOP}/contrib/unbound
 
-.PATH: ${UNBOUNDDIR} ${UNBOUNDDIR}/daemon ${UNBOUNDDIR}/util ${UNBOUNDDIR}/util/shm_side ${UNBOUNDDIR}/doc
+.PATH: ${UNBOUNDDIR} ${UNBOUNDDIR}/daemon ${UNBOUNDDIR}/util ${UNBOUNDDIR}/util/shm_side ${UNBOUNDDIR}/doc ${UNBOUNDDIR}/compat
 
 PROG=	local-unbound
 SRCS=	acl_list.c cachedump.c daemon.c remote.c shm_main.c stats.c \
-	ub_event.c unbound.c worker.c
+	ub_event.c unbound.c worker.c explicit_bzero.c
 CFLAGS+=	-I${UNBOUNDDIR} -I${LDNSDIR}
 CFLAGS+=	-I${.CURDIR:H} -I${.CURDIR}
 LIBADD=	unbound util ssl crypto pthread
