--- a/etc/defaults/periodic.conf
+++ b/etc/defaults/periodic.conf
@@ -23,6 +23,8 @@ periodic_conf_files="/etc/periodic.conf /etc/periodic.conf.local"
 # periodic script dirs
 local_periodic="/usr/local/etc/periodic"
 
+# Max time to sleep to avoid causing congestion on download servers
+anticongestion_sleeptime=3600
 
 # Daily options
 
@@ -115,13 +117,16 @@ daily_status_gstripe_enable="NO"			# Check gstripe(8)
 # 409.status-gconcat
 daily_status_gconcat_enable="NO"			# Check gconcat(8)
 
+# 410.status-mfi
+daily_status_mfi_enable="NO"				# Check mfiutil(8)
+
 # 420.status-network
 daily_status_network_enable="YES"			# Check network status
 daily_status_network_usedns="YES"			# DNS lookups are ok
 daily_status_network_netstat_flags="-d"			# netstat(1) flags
 
-# 430.status-rwho
-daily_status_rwho_enable="YES"				# Check system status
+# 430.status-uptime
+daily_status_uptime_enable="YES"			# Check system uptime
 
 # 440.status-mailq
 daily_status_mailq_enable="YES"				# Check mail status
@@ -306,6 +311,18 @@ security_status_tcpwrap_period="daily"
 
 if [ -z "${source_periodic_confs_defined}" ]; then
         source_periodic_confs_defined=yes
+
+	# Sleep for a random amount of time in order to mitigate the thundering
+	# herd problem of multiple hosts running periodic simultaneously.
+	# Will not sleep when used interactively.
+	# Will sleep at most once per invocation of periodic
+	anticongestion() {
+		[ -n "$PERIODIC_IS_INTERACTIVE" ] && return
+		if [ -f "$PERIODIC_ANTICONGESTION_FILE" ]; then
+			rm -f $PERIODIC_ANTICONGESTION_FILE
+			sleep `jot -r 1 0 ${anticongestion_sleeptime}`
+		fi
+	}
 
 	# Compatibility with old daily variable names.
 	# They can be removed in stable/11.
