add some missing directories

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -447,6 +447,10 @@
             ..
             uefisign
             ..
+            ypldap
+            ..
+        ..
+        firmware
         ..
         games
             atc
