--- a/stand/forth/Makefile
+++ b/stand/forth/Makefile
@@ -14,7 +14,7 @@ MAN+=	beastie.4th.8 \
 
 FILES+=	beastie.4th
 FILES+=	brand.4th
-FILES+=	brand-fbsd.4th
+FILES+=	brand-mbsd.4th
 FILES+=	check-password.4th
 FILES+=	color.4th
 FILES+=	delay.4th
@@ -22,7 +22,7 @@ FILES+=	frames.4th
 FILES+=	loader.4th
 FILES+=	logo-beastie.4th
 FILES+=	logo-beastiebw.4th
-FILES+=	logo-fbsdbw.4th
+FILES+=	logo-mbsdbw.4th
 FILES+=	logo-orb.4th
 FILES+=	logo-orbbw.4th
 FILES+=	menu.4th
