--- a/etc/login.conf
+++ b/etc/login.conf
@@ -42,6 +42,8 @@ default:\
 	:vmemoryuse=unlimited:\
 	:swapuse=unlimited:\
 	:pseudoterminals=unlimited:\
+	:kqueues=unlimited:\
+	:umtxp=unlimited:\
 	:priority=0:\
 	:ignoretime@:\
 	:umask=022:
@@ -80,8 +82,8 @@ root:\
 # Russian Users Accounts. Setup proper environment variables.
 #
 russian|Russian Users Accounts:\
-	:charset=KOI8-R:\
-	:lang=ru_RU.KOI8-R:\
+	:charset=UTF-8:\
+	:lang=ru_RU.UTF-8:\
 	:tc=default:
 
 
