--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -124,6 +124,7 @@ dhcp6c_config="/etc/dhcp6c.conf"	# Path to dhcp6c configuration
 dhcp6c_interfaces=""		# Set it to the network interface(s) 
 				# where dhcp6c should work on.
 dhcp6c_flags=""			# Extra flags to pass to dhcp6c
+netif_enable="YES"		# Set to YES to initialize network interfaces
 netif_ipexpand_max="2048"	# Maximum number of IP addrs in a range spec.
 wpa_supplicant_program="/usr/sbin/wpa_supplicant"
 wpa_supplicant_flags="-s"	# Extra flags to pass to wpa_supplicant
@@ -525,9 +526,6 @@ stf_interface_ipv4plen="0"	# Prefix length for 6to4 IPv4 addr,
 stf_interface_ipv6_ifid="0:0:0:1"	# IPv6 interface id for stf0.
 				# If you like, you can set "AUTO" for this.
 stf_interface_ipv6_slaid="0000"	# IPv6 Site Level Aggregator for stf0
-ipv6_faith_prefix="NO"		# Set faith prefix to enable a FAITH
-				# IPv6-to-IPv4 TCP translator.  You also need
-				# faithd(8) setup.
 ipv6_ipv4mapping="NO"		# Set to "YES" to enable IPv4 mapped IPv6 addr
 				# communication. (like ::ffff:a.b.c.d)
 ipv6_ipfilter_rules="/etc/ipf6.rules"	# rules definition file for ipfilter,
