--- a/etc/newsyslog.conf.d/opensm.conf
+++ b/etc/newsyslog.conf.d/opensm.conf
@@ -1,3 +1,1 @@
-# $MidnightBSD$
-
-/var/log/opensm.log			600  7	*	*	Z	/var/run/opensm.pid	30
+/var/log/opensm.log			600  7	1000	*	J	/var/run/opensm.pid	30
