update some periodic scripts

--- a/etc/periodic/monthly/Makefile
+++ b/etc/periodic/monthly/Makefile
@@ -1,6 +1,6 @@
-# $MidnightBSD$
+.include <src.opts.mk>
 
-.include <bsd.own.mk>
+FILESGROUPS=FILES
 
 FILES=	450.status-security \
 	999.local
@@ -8,7 +8,11 @@ FILES=	450.status-security \
 # NB: keep these sorted by MK_* knobs
 
 .if ${MK_UTMPX} != "no"
-FILES+=	200.accounting
+FILESGROUPS+=	ACCT
+ACCT+=		200.accounting
 .endif
+ACCTDIR=	/etc/periodic/monthly
+ACCTMODE=	${BINMODE}
+ACCTPACKAGE=	acct
 
 .include <bsd.prog.mk>
