--- a/etc/mtree/BSD.var.dist
+++ b/etc/mtree/BSD.var.dist
@@ -45,6 +45,8 @@
         ..
         ipf             mode=0700
         ..
+	midnightbsd-update  mode=0700
+	..
         mport
             downloads
             ..
