--- a/etc/pam.d/Makefile
+++ b/etc/pam.d/Makefile
@@ -1,8 +1,10 @@
 # $MidnightBSD$
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 NO_OBJ=
+
+FILESGROUPS=	FILES
 
 FILES=	README \
 	cron \
@@ -16,21 +18,42 @@ FILES=	README \
 	sshd su system \
 	xdm
 
+FILESDIR=	/etc/pam.d
+FILESMODE=	644
+
 .if ${MK_AT} != "no"
-FILES+=	atrun
+FILESGROUPS+=	AT
+AT+=	atrun
+ATPACKAGE+=	at
+ATDIR=		${FILESDIR}
+ATMODE=		${FILESMODE}
 .endif
 
 .if ${MK_FTP} != "no"
-FILES+=	ftpd
+FILESGROUPS+=	FTP
+FTP+=	ftpd
+FTPPACKAGE+=	ftp
+FTPDIR=		${FILESDIR}
+FTPMODE=	${FILESMODE}
 LINKS=	${FILESDIR}/ftpd ${FILESDIR}/ftp
 .endif
 
-.if ${MK_TELNET} != "no"
-FILES+=	telnetd
+.if ${MK_RCMDS} != "no"
+FILESGROUPS+=	RCMDS
+RCMDS+=		rsh
+RCMDSPACKAGE+=	rcmds
+RCMDSDIR=	${FILESDIR}
+RCMDSMODE=	${FILESMODE}
 .endif
 
-FILESDIR=	/etc/pam.d
-FILESMODE=	644
+.if ${MK_TELNET} != "no"
+FILESGROUPS+=	TELNET
+TELNET+=	telnetd
+TELNETPACKAGE+=	telnet
+TELNETDIR=	${FILESDIR}
+TELNETMODE=	${FILESMODE}
+.endif
+
 FILESMODE_README=	444
 
 .include <bsd.prog.mk>
