--- a/etc/autofs/Makefile
+++ b/etc/autofs/Makefile
@@ -1,6 +1,12 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/etc/autofs/Makefile 332588 2018-04-16 15:59:51Z trasz $
 
-FILES=		include_ldap special_hosts special_media special_noauto special_null
+FILES=		include_ldap \
+		include_nis \
+		include_nis_nullfs \
+		special_hosts \
+		special_media \
+		special_noauto \
+		special_null
 
 NO_OBJ=
 FILESDIR=	/etc/autofs
