--- a/usr.sbin/kldxref/Makefile
+++ b/usr.sbin/kldxref/Makefile
@@ -1,12 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/kldxref/Makefile 211934 2010-08-28 15:03:11Z nwhitehorn $
+# $FreeBSD: stable/11/usr.sbin/kldxref/Makefile 275904 2014-12-18 16:57:19Z imp $
 
 PROG=	kldxref
 MAN=	kldxref.8
 SRCS=	kldxref.c ef.c ef_obj.c
 
 WARNS?=	2
-CFLAGS+=-fno-strict-aliasing
 
 .if exists(ef_${MACHINE_CPUARCH}.c) && ${MACHINE_ARCH} != "powerpc64"
 SRCS+=	ef_${MACHINE_CPUARCH}.c
