turn on perl again.

--- a/usr.bin/Makefile
+++ b/usr.bin/Makefile
@@ -9,10 +9,10 @@
 #
 
 # perl depends on libdl.so and that is turned off without filter
-#.if defined(LINKER_FEATURES) && ${LINKER_FEATURES:Mfilter}
-#SUBDIR= perl \
-#	.WAIT
-#.endif
+.if defined(LINKER_FEATURES) && ${LINKER_FEATURES:Mfilter}
+SUBDIR= perl \
+	.WAIT
+.endif
 
 SUBDIR+=alias \
 	apply \
