add perl 5.32.0 dir

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -46,6 +46,10 @@
             encoder
             ..
         ..
+        perl
+            5.32.0
+            ..
+        ..
     ..
     libdata
         gcc
