Rework building release isos

--- a/release/Makefile
+++ b/release/Makefile
@@ -70,8 +70,6 @@ VOLUME_LABEL=	${REVISION:C/[.-]/_/g}_${BRANCH:C/[.-]/_/g}_${TARGET_ARCH}
 .endfor
 .endif
 
-NO_INSTALLEXTRAKERNELS=no
-
 .if !defined(VOLUME_LABEL) || empty(VOLUME_LABEL)
 VOLUME_LABEL=	MidnightBSD_Install
 .endif
@@ -109,22 +107,6 @@ RELEASE_TARGETS+= memstick.img
 RELEASE_TARGETS+= mini-memstick.img
 IMAGES+=	memstick.img
 IMAGES+=	mini-memstick.img
-.endif
-.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
-RELEASE_TARGETS+=uefi-memstick.img
-RELEASE_TARGETS+=uefi-mini-memstick.img
-IMAGES+=	uefi-memstick.img
-IMAGES+=	uefi-mini-memstick.img
-.endif
-.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
-RELEASE_TARGETS+=uefi-disc1.iso
-RELEASE_TARGETS+=uefi-bootonly.iso
-IMAGES+=	uefi-disc1.iso
-IMAGES+=	uefi-bootonly.iso
-. if defined(WITH_DVD) && !empty(WITH_DVD)
-RELEASE_TARGETS+=uefi-dvd1.iso
-IMAGES+=	uefi-dvd1.iso
-. endif
 .endif
 
 CLEANFILES=	packagesystem *.txz MANIFEST release ${IMAGES}
@@ -192,14 +174,16 @@ disc1: packagesystem
 # Install system
 	mkdir -p ${.TARGET}
 	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
-	    DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_AMD=1 WITHOUT_AT=1 \
-	    WITHOUT_INSTALLLIB=1 WITHOUT_LIB32=1 WITHOUT_MAIL=1 \
-	    WITHOUT_NCP=1 WITHOUT_TOOLCHAIN=1 WITHOUT_PROFILE=1 \
-	    WITHOUT_RESCUE=1 WITHOUT_DICT=1 \
-	    WITHOUT_KERNEL_SYMBOLS=1
+	    DESTDIR=${.OBJDIR}/${.TARGET} MK_AMD=no MK_AT=no \
+	    MK_INSTALLLIB=no MK_LIB32=no MK_MAIL=no \
+	    MK_NCP=no MK_TOOLCHAIN=no MK_PROFILE=no \
+	    MK_RESCUE=no MK_DICT=no \
+	    MK_KERNEL_SYMBOLS=no MK_TESTS=no MK_DEBUG_FILES=no
 # Copy distfiles
 	mkdir -p ${.TARGET}/usr/midnightbsd-dist
-	cp *.txz MANIFEST ${.TARGET}/usr/midnightbsd-dist
+	for dist in MANIFEST $$(ls *.txz | grep -vE -- '(base|lib32|kernel)-dbg'); \
+	    do cp $${dist} ${.TARGET}/usr/midnightbsd-dist; \
+	done
 # Copy documentation, if generated
 .if !defined(NODOC)
 	cp reldoc/* ${.TARGET}
@@ -216,12 +200,12 @@ bootonly: packagesystem
 # Install system
 	mkdir -p ${.TARGET}
 	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
-	    DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_AMD=1 WITHOUT_AT=1 \
-	    WITHOUT_GAMES=1 WITHOUT_GROFF=1 \
-	    WITHOUT_INSTALLLIB=1 WITHOUT_LIB32=1 WITHOUT_MAIL=1 \
-	    WITHOUT_NCP=1 WITHOUT_TOOLCHAIN=1 WITHOUT_PROFILE=1 \
-	    WITHOUT_RESCUE=1 WITHOUT_DICT=1 \
-	    WITHOUT_KERNEL_SYMBOLS=1
+	    DESTDIR=${.OBJDIR}/${.TARGET} MK_AMD=no MK_AT=no \
+	    MK_GAMES=no MK_GROFF=no \
+	    MK_INSTALLLIB=no MK_LIB32=no MK_MAIL=no \
+	    MK_NCP=no MK_TOOLCHAIN=no MK_PROFILE=no \
+	    MK_RESCUE=no MK_DICT=no \
+	    MK_KERNEL_SYMBOLS=no MK_TESTS=no MK_DEBUG_FILES=no
 # Copy manifest only (no distfiles) to get checksums
 	mkdir -p ${.TARGET}/usr/midnightbsd-dist
 	cp MANIFEST ${.TARGET}/usr/midnightbsd-dist
@@ -240,10 +224,13 @@ dvd: packagesystem
 # Install system
 	mkdir -p ${.TARGET}
 	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
-		DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_RESCUE=1 WITHOUT_KERNEL_SYMBOLS=1
+		DESTDIR=${.OBJDIR}/${.TARGET} MK_RESCUE=no MK_KERNEL_SYMBOLS=no \
+		MK_TESTS=no MK_DEBUG_FILES=no
 # Copy distfiles
 	mkdir -p ${.TARGET}/usr/midnightbsd-dist
-	cp *.txz MANIFEST ${.TARGET}/usr/midnightbsd-dist
+	for dist in MANIFEST $$(ls *.txz | grep -v -- '(base|lib32)-dbg'); \
+	    do cp $${dist} ${.TARGET}/usr/midnightbsd-dist; \
+	done
 # Copy documentation, if generated
 .if !defined(NODOC)
 	cp reldoc/* ${.TARGET}
@@ -260,26 +247,8 @@ release.iso: disc1.iso
 disc1.iso: disc1
 	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_CD ${.TARGET} disc1 ${XTRADIR}
 
-uefi-disc1.iso: disc1
-.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
-	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFICD \
-		${.TARGET} disc1
-.endif
-
-uefi-bootonly.iso: bootonly
-.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
-	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFIBO \
-		${.TARGET} bootonly
-.endif
-
 dvd1.iso: dvd pkg-stage
 	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_DVD ${.TARGET} dvd ${XTRADIR}
-
-uefi-dvd1.iso: dvd pkg-stage
-.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
-	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFIDVD \
-		${.TARGET} dvd
-.endif
 
 bootonly.iso: bootonly
 	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_BO ${.TARGET} bootonly ${XTRADIR}
@@ -291,18 +260,6 @@ memstick.img: disc1
 mini-memstick: mini-memstick.img
 mini-memstick.img: bootonly
 	sh ${.CURDIR}/${TARGET}/make-memstick.sh bootonly ${.TARGET}
-
-uefi-memstick: uefi-memstick.img
-uefi-memstick.img: disc1
-.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
-	sh ${.CURDIR}/${TARGET}/make-uefi-memstick.sh disc1 ${.TARGET}
-.endif
-
-uefi-mini-memstick: uefi-mini-memstick.img
-uefi-mini-memstick.img: bootonly
-.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
-	sh ${.CURDIR}/${TARGET}/make-uefi-memstick.sh bootonly ${.TARGET}
-.endif
 
 packagesystem: base.txz kernel.txz ${EXTRA_PACKAGES}
 	sh ${.CURDIR}/scripts/make-manifest.sh *.txz > MANIFEST
