--- a/etc/login.conf
+++ b/etc/login.conf
@@ -61,6 +61,7 @@ xuser:\
 staff:\
 	:tc=default:
 daemon:\
+	:mail@:\
 	:memorylocked=128M:\
 	:tc=default:
 news:\
@@ -121,7 +122,8 @@ russian|Russian Users Accounts:\
 #standard:\
 #	:copyright=/etc/COPYRIGHT:\
 #	:welcome=/etc/motd:\
-#	:setenv=MAIL=/var/mail/$,BLOCKSIZE=K:\
+#	:setenv=BLOCKSIZE=K:\
+#	:mail=/var/mail/$:\
 #	:path=~/bin /bin /usr/bin /usr/local/bin:\
 #	:manpath=/usr/share/man /usr/local/man:\
 #	:nologin=/var/run/nologin:\
