--- a/secure/caroot/blacklisted/Makefile
+++ b/secure/caroot/blacklisted/Makefile
@@ -1,8 +1,8 @@
-# $FreeBSD: stable/11/secure/caroot/blacklisted/Makefile 357633 2020-02-06 18:37:38Z kevans $
+# $FreeBSD$
 
 BINDIR=		/usr/share/certs/blacklisted
 
-BLACKLISTED_CERTS!=	ls ${.CURDIR}/*.pem 2> /dev/null || true
+BLACKLISTED_CERTS!=	echo ${.CURDIR}/*.pem 2> /dev/null || true
 
 FILES+=	 ${BLACKLISTED_CERTS}
 
