--- a/secure/caroot/trusted/Makefile
+++ b/secure/caroot/trusted/Makefile
@@ -1,8 +1,8 @@
-# $FreeBSD: stable/11/secure/caroot/trusted/Makefile 352948 2019-10-02 01:05:29Z kevans $
+# $FreeBSD$
 
 BINDIR=		/usr/share/certs/trusted
 
-TRUSTED_CERTS!=	ls ${.CURDIR}/*.pem 2> /dev/null || true
+TRUSTED_CERTS!=	echo ${.CURDIR}/*.pem 2> /dev/null || true
 
 FILES+=	 ${TRUSTED_CERTS}
 
